@@ -31,18 +31,27 @@ import org.apache.commons.lang3.StringUtils;
 
 public class ValidationResult {
 
-    private Collection<String> errors;
+    private final Collection<String> errors;
+    private final Collection<String> warnings;
 
     public static ValidationResult success() {
         return new ValidationResult();
     }
 
     public static ValidationResult errors(Collection<String> errors) {
-        return new ValidationResult(errors);
+        return new ValidationResult(errors, List.of());
     }
 
     public static ValidationResult errors(String... errors) {
-        return new ValidationResult(Arrays.asList(errors));
+        return new ValidationResult(Arrays.asList(errors), List.of());
+    }
+
+    public static ValidationResult warnings(Collection<String> warnings) {
+        return new ValidationResult(List.of(), warnings);
+    }
+
+    public static ValidationResult warnings(String... warnings) {
+        return new ValidationResult(List.of(), Arrays.asList(warnings));
     }
 
     public static ValidationResult of(ValidationResult... validationResults) {
@@ -50,26 +59,48 @@ public class ValidationResult {
                                                   .map(ValidationResult::getErrors)
                                                   .flatMap(Collection::stream)
                                                   .collect(Collectors.toList());
-        return new ValidationResult(validationErrors);
+        Collection<String> validationWarnings = Arrays.stream(validationResults)
+                                                    .map(ValidationResult::getWarnings)
+                                                    .flatMap(Collection::stream)
+                                                    .collect(Collectors.toList());
+        return new ValidationResult(validationErrors, validationWarnings);
     }
 
     private ValidationResult() {
         this.errors = List.of();
+        this.warnings = List.of();
     }
 
-    private ValidationResult(Collection<String> errors) {
+    private ValidationResult(Collection<String> errors, Collection<String> warnings) {
         this.errors = errors;
+        this.warnings = warnings;
     }
 
     public Collection<String> getErrors() {
         return errors;
     }
 
+    public Collection<String> getWarnings() {
+        return warnings;
+    }
+
     public boolean hasErrors() {
         return !errors.isEmpty();
     }
 
+    public boolean hasWarnings() {
+        return !warnings.isEmpty();
+    }
+
     public String combineErrorMessages() {
-        return StringUtils.join(errors, ", ");
+        return combineMessages(errors);
+    }
+
+    public String combineWarningMessages() {
+        return combineMessages(warnings);
+    }
+
+    private String combineMessages(Collection<String> messages) {
+        return StringUtils.join(messages, ", ");
     }
 }
